# structivize

./: .gitignore  LICENSE  README.md  dockerfile  makefile  pyproject.toml  requirements.txt  setup.sh  tools_licenses.md
examples/: EXAMPLES.md
examples/biology/bio_biopax/: sample_bio_biopax.owl
examples/biology/bio_fasta/: sample_bio_fasta.txt
examples/biology/bio_nexml/: sample_bio_nexml.xml
examples/biology/bio_phyloxml/: sample_bio_phyloxml.xml
examples/biology/bio_sbml/: sample_bio_sbml.xml
examples/business/biz_bpmn/: sample_biz_bpmn.xml
examples/charts/charts_plotly/: sample_charts_plotly.json
examples/chemistry/chem_ct/: sample_chem_ct.ct
examples/chemistry/chem_mol/: sample_chem_mol.mol
examples/chemistry/chem_pdb/: sample_chem_pdb.txt
examples/chemistry/chem_smarts/: sample_chem_smarts_react.txt
examples/code/biology/bio_ct/: sample_bio_ct.ct
examples/code/biology/bio_newick/: sample_bio_newick.txt
examples/code/biology/bio_sbml/: sample_bio_sbml.xml
examples/code/biology/bio_vienna/: sample_bio_vienna.txt
examples/code/business/biz_pnml/: sample_biz_pnml.xml
examples/code/charts/charts_geojson/: sample_charts_geojson.json
examples/code/charts/charts_plotly/: sample_charts_plotly.json  sample_charts_plotly_1.json  sample_charts_plotly_table.json
examples/code/charts/charts_vega/: sample_charts_vega.json
examples/code/chemistry/chem_cml/: sample_chem_cml.xml
examples/code/chemistry/chem_inchi/: sample_chem_inchi.txt
examples/code/chemistry/chem_smarts/: sample_chem_smarts.txt
examples/code/culture/chess_pgn/: sample_chess_pgn.txt
examples/code/datastructure/db_dbml/: sample_db_dbml.dbml
examples/code/datastructure/db_mysql/: sample_db_mysql.sql
examples/code/datastructure/db_postgres/: sample_db_postgres.sql
examples/code/datastructure/db_prisma/: sample_db_prisma.prisma
examples/code/datastructure/graph_kg/: sample_kg_owl_ttl.ttl  sample_kg_rdf_ttl.ttl  sample_kg_rdf_xml.xml
examples/code/drawing/draw_ditaa/: sample_draw_ditaa.txt
examples/code/drawing/tikz/: sample_tikz_chemplants.tikz  sample_tikz_circuit.tikz  sample_tikz_pid.tikz
examples/code/electronics/hdl_vhdl/: sample_hdl_vhdl.vhd
examples/code/electronics/hdl_yosys/: sample_hdl_yosys.json
examples/code/electronics/logic/: sample_logic_bool.txt
examples/code/electronics/plc_il/: sample_plc_il.txt
examples/code/electronics/quantum_qasm/: sample_quantum_qasm_3.qasm
examples/code/modeling/model_dot/: sample_model_dot.dot
examples/code/modeling/model_markmap/: sample_model_markmap.md
examples/code/modeling/model_mermaid/: sample_mermaid_activity.mmd  sample_mermaid_class.mmd  sample_mermaid_mindmap.mmd  sample_mermaid_state.mmd
examples/code/modeling/model_plantuml/: sample_plantuml_component.puml  sample_plantuml_er.puml  sample_plantuml_gantt.puml  sample_plantuml_mindmap.puml  (+2 more)
examples/culture/chess_fen/: sample_chess_fen.txt
examples/culture/music_abc/: sample_music_abc.abc
examples/culture/music_lilypond/: sample_music_lilypond.ly
examples/culture/music_musicxml/: sample_music_musicxml.xml
examples/datastructure/graph_kg/: sample_kg_owl_xml.owl
examples/drawing/draw_asymptote/: sample_draw_asymptote.asy
examples/drawing/tikz/: sample_tikz_plc.tikz
examples/electronics/circuit_kicad/: sample_circuit_kicad.net
examples/electronics/circuit_lcapy/: sample_circuit_lcapy.net
examples/electronics/circuit_spice/: sample_circuit_spice.net  sample_circuit_spice_2.net
examples/electronics/hdl_verilog/: sample_hdl_verilog.v
examples/electronics/logic/: sample_logic_symb.txt
examples/electronics/quantum_cirq/: sample_quantum_cirq.json
examples/electronics/quantum_qcircuit/: sample_quantum_qcircuit.tex
examples/electronics/quantum_quirk/: sample_quantum_quirk.json
examples/modeling/model_d2/: sample_model_d2.txt
examples/modeling/model_mermaid/: sample_mermaid_er.mmd  sample_mermaid_gantt.mmd  sample_mermaid_sequence.mmd
examples/modeling/model_plantuml/: sample_plantuml_activity.puml  sample_plantuml_class.puml  sample_plantuml_state.puml
examples/modeling/nn_keras/: sample_nn_keras.json
examples/modeling/nn_onnx/: sample_nn_onnx.onnx
src/structivize/: __init__.py  cli.py  image_utils.py  render_batch.py  renderer.py  utils.py
src/structivize/renderers/: __init__.py  browser_control.py  tool_settings.json
structivize/: image_utils.py  renderer.py  utils.py
structivize/renderers/biology/: __init__.py  renderer_bio_ct.py  renderer_bio_fasta.py  renderer_bio_newick.py  renderer_bio_nexml.py  renderer_bio_phyloxml.py  renderer_bio_sbml.py  renderer_bio_scadnano.py  renderer_bio_vienna.py
structivize/renderers/charts/: __init__.py  renderer_charts_plotly.py  renderer_charts_vega.py
structivize/renderers/chemistry/: __init__.py  renderer_chem_cml.py  renderer_chem_ct.py  renderer_chem_inchi.py  renderer_chem_mol.py  renderer_chem_pdb.py  renderer_chem_smarts.py  renderer_chem_smiles.py
structivize/renderers/drawing/: __init__.py  renderer_tikz.py  renderer_tikz_circuit.py
structivize/renderers/electronics/: __init__.py  renderer_circuit_kicad.py  renderer_circuit_lcapy.py  renderer_logic.py  renderer_quantum_qcircuit.py  renderer_quantum_quirk.py
structivize/renderers/modeling/: render_model_d2.py  renderer_model_dot.py  renderer_model_markmap.py  renderer_model_mermaid.py  renderer_model_plantuml.py  renderer_state_scxml.py
tests/: conftest.py  renderer_registry.py  test_renderers.py
(+70 files in other folders)
