[project]
name = "structivize"
version = "0.1.0"
description = "Rendering toolkit for generating structured visualizations from code in specific formal representation languages (FRL), comprising several tools in multiple domains."
keywords = ["rendering", "structure", "visualization", "formal language", "code2image", "image"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Steinigen", email = "contact@steinigen.me" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "rdflib>=7.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/danielsteinigen/structivize"
Documentation = "https://github.com/danielsteinigen/structivize#readme"
Issues = "https://github.com/danielsteinigen/structivize/issues"

[project.scripts]
structivize = "structivize:cli"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 140
target-version = ["py311"]
extend-exclude = '''
(
  ^\.venv
  |tools_rendering
)
'''

[tool.isort]
profile = "black"
line_length = 140
skip = [".venv", "tools_rendering"]
