[project]
name = "structivize"
version = "0.1.0"
description = "Rendering toolkit for generating structured visualizations from code in specific formal representation languages (FRL), comprising several tools in multiple domains."
keywords = ["rendering", "structure", "visualization", "formal language", "code2image", "image", "diagram]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Steinigen", email = "contact@steinigen.me" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/danielsteinigen/structivize"
Documentation = "https://github.com/danielsteinigen/structivize#readme"
Issues = "https://github.com/danielsteinigen/structivize/issues"
"Third-Party Licenses" = "https://github.com/danielsteinigen/structivize/blob/main/tools_licenses.md"

[project.scripts]
structivize = "structivize.cli:main"

[project.optional-dependencies]
biology = [
    "biopython>=1.85",
    "forgi>=2.2.3",
    "ViennaRNA>=2.7.0",
    "SBMLDiagrams>=1.4.2",
    "sbmlnetwork>=0.5.5",
    "weblogo>=3.7.12",
    "logomaker>=0.8.6",
    "ete3>=3.1.3",
    "scadnano>=0.19.4",
]
business = [
    "pm4py>=2.7.13.1",
]
charts = [
    "plotly>=6.3.0",
    "kaleido>=1.0.0",
    "altair>=5.5.0",
    "vl-convert-python>=1.8.0",
    "geopandas>=1.1.1",
    "geoplot>=0.5.1",
    "osmnx>=2.0.6",
]
chemistry = [
    "rdkit>=2025.3.5",
]
culture = [
    "chess>=1.11.1",
]
datastructure = [
    "graphviz>=0.20.3",
    "pydot>=3.0.2",
    "rdflib>=7.1.4",
]
drawing = [
    "pylatex>=1.4.2",
    "pylatexenc>=2.10",
]
electronics = [
    "skidl>=2.0.0",
    "lcapy>=1.24",
    "PySpice>=1.5",
    "schemdraw>=0.19",
    "qiskit>=1.3.2",
    "qiskit-qasm3-import>=0.5.1",
    "cirq>=1.4.1",
    "cirq-core[contrib]>=1.4.1",
]
modeling = [
    "sismic>=1.6.8",
    "netron>=8.5.3",
    "netron-export @ git+https://github.com/raphael-prevost/netron-export@v0.2.6",
    "keras>=3.11.3",
    "tensorflow-cpu>=2.20.0",
    "PyQt5>=5.15.11",
]
all = [
    "biopython>=1.85",
    "forgi>=2.2.3",
    "ViennaRNA>=2.7.0",
    "SBMLDiagrams>=1.4.2",
    "sbmlnetwork>=0.5.5",
    "weblogo>=3.7.12",
    "logomaker>=0.8.6",
    "ete3>=3.1.3",
    "scadnano>=0.19.4",
    "pm4py>=2.7.13.1",
    "plotly>=6.3.0",
    "kaleido>=1.0.0",
    "altair>=5.5.0",
    "vl-convert-python>=1.8.0",
    "geopandas>=1.1.1",
    "geoplot>=0.5.1",
    "osmnx>=2.0.6",
    "rdkit>=2025.3.5",
    "chess>=1.11.1",
    "graphviz>=0.20.3",
    "pydot>=3.0.2",
    "rdflib>=7.1.4",
    "pylatex>=1.4.2",
    "pylatexenc>=2.10",
    "skidl>=2.0.0",
    "lcapy>=1.24",
    "PySpice>=1.5",
    "schemdraw>=0.19",
    "qiskit>=1.3.2",
    "qiskit-qasm3-import>=0.5.1",
    "cirq>=1.4.1",
    "cirq-core[contrib]>=1.4.1",
    "sismic>=1.6.8",
    "netron>=8.5.3",
    "netron-export @ git+https://github.com/raphael-prevost/netron-export@v0.2.6",
    "keras>=3.11.3",
    "tensorflow-cpu>=2.20.0",
    "PyQt5>=5.15.11",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 140
target-version = ["py311"]
extend-exclude = '''
(
  ^\.venv
  |tools_rendering
)
'''

[tool.isort]
profile = "black"
line_length = 140
skip = [".venv", "tools_rendering"]
